--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "type": "module",
   "devDependencies": {
     "lovecraft": "^1.0.3"
+  },
+  "dependencies": {
+    "aleister": "^1.0.2",
+    "phantomaton-execution": "^0.0.7",
+    "phantomaton-plugins": "^0.0.2"
   }
 }
