--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "description": "",
   "type": "module",
   "devDependencies": {
-    "lovecraft": "^1.0.3"
+    "lovecraft": "^1.0.3",
+    "phantomaton": "^0.1.0",
+    "phantomaton-gemini": "^0.0.2"
   },
   "dependencies": {
     "aleister": "^1.0.2",
+    "phantomaton-conversations": "^1.0.1",
     "phantomaton-execution": "^0.0.7",
     "phantomaton-plugins": "^0.0.3",
     "puppeteer": "^24.7.0"
